test/classes/marybeth/test_dispatch1-error.good
test_dispatch1-error.chpl:27: error: type mismatch in assignment from shoe to pumps
